--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,5 @@
 //
 // You can add/overwrite all your bower_components .sass variables here
 // ----------------------------------------------------------------------------------------------------
+
+$greenNavItem: green; 
