--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -6,17 +6,88 @@ body {
   color: #222;
 }
 
-.welcome {
-  width: 300px;
-  height: 510px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin-left: -150px;
-  margin-top: -255px;
+.nav-bar{
+  text-align: left;
+  ul{
+    list-style: none;
+
+  }
+  li{
+    display: inline-block;
+    margin: 0 10px;
+    color: $greenNavItem;
+    a{
+      color: $greenNavItem;
+    }
+    i{
+      font-size: 45px;
+    }
+  }
 }
 
-a, a:visited {
-  text-decoration: none;
+.container {
+  max-width: 960px;
+  margin: auto;
+  .photo-conteiner {
+    float: left;
+    margin: 0 6%;
+    max-width: 200px;
+    min-height: 225px;
+    .photo-info{
+      display: inline-block;
+    }
+  }
+}
+
+
+footer{
+  position: fixed;
+  bottom: 0;
+}
+
+
+
+
+@media all and (max-width: 768px){
+  .container {
+    .photo-info{
+      width: 100%;
+      .photo-max{
+        // width: 50%;
+      }
+      .photo-title{
+        font-size: 40px;
+      }      
+    }
+    .photo-conteiner {
+      margin: 0 11%;
+    }
+  }
+}
+
+@media  (max-width: 414px) and (min-width: 358px){
+  .container {
+    .photo-info{
+      .photo-max{
+        width: 90%;
+      }
+    }
+    .photo-conteiner {
+      margin: 0 26%;
+    }
+  }
+}
+
+@media (max-width: 320px) {
+  .container {
+    .photo-info{
+      .photo-max{
+        width: 90%;
+      }
+    }   
+    .photo-conteiner {
+      margin: 0 20%;
+    }
+  }
 }
 
