added scroll directive

--- a/src/modules/app/photos/templates/photo.html
+++ b/src/modules/app/photos/templates/photo.html
@@ -1,4 +1,7 @@
 <div class="photo-info">
     <img class="photo-max" ng-src="{{photoCtrl.photo.url}}" alt="{{photoCtrl.photo.title}}">
     <div class="photo-title">{{photoCtrl.photo.title}}</div>
+    <div class="to-albom-link">
+        <a href="/#/albom/{{photoCtrl.photo.albumId}}">To albom <i class="fa fa-object-group" aria-hidden="true"></i></a>
+    </div>
 </div>
