--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -8,9 +8,11 @@ body {
 
 .nav-bar{
   text-align: left;
+  background-color: wheat;
   ul{
     list-style: none;
-
+    margin: 0;
+    padding: 0;
   }
   li{
     display: inline-block;
@@ -18,8 +20,13 @@ body {
     color: $greenNavItem;
     a{
       color: $greenNavItem;
+      display: block;
+    }
+    a:hover{
+      background-color: #fff;
     }
     i{
+      width: 100%;
       font-size: 45px;
     }
   }
@@ -30,19 +37,39 @@ body {
   margin: auto;
   .photo-conteiner {
     float: left;
-    margin: 0 6%;
-    max-width: 200px;
-    min-height: 225px;
-    .photo-info{
-      display: inline-block;
-    }
+    margin: 0 6% 10px;
+    width: 21%;
+    min-height: 245px;
+  }
+  .photo-list{
+    overflow: auto;
   }
 }
 
+.content{
+  padding: 10px 0 50px;
+}
+
+.photo-info{
+  display: inline-block;
+  .to-albom-link{
+    a{
+      color: $greenNavItem;
+      text-decoration: none;
+    }        
+  }
+}
 
 footer{
   position: fixed;
   bottom: 0;
+  width: 100%;
+  .nav-bar{
+    display: inline-block;
+    width: 100%;
+    padding: 10px 0;
+    // background-color: wheat; 
+  }
 }
 
 
@@ -51,17 +78,29 @@ footer{
 @media all and (max-width: 768px){
   .container {
     .photo-info{
-      width: 100%;
-      .photo-max{
-        // width: 50%;
-      }
       .photo-title{
-        font-size: 40px;
+        font-size: 26px;
       }      
     }
     .photo-conteiner {
-      margin: 0 11%;
+      padding: 0 8%;
+      height: 335px;   
     }
+  }
+  footer{
+    .nav-bar{font-size: 25px;
+    }
+  }
+}
+
+@media  (max-width: 414px) and (min-width: 320px){
+  .nav-bar.nav-top{
+    text-align: center;
+    ul{
+      li{
+        display: block;
+      }
+    }    
   }
 }
 
@@ -73,7 +112,7 @@ footer{
       }
     }
     .photo-conteiner {
-      margin: 0 26%;
+      padding: 0 26%;
     }
   }
 }
@@ -86,7 +125,7 @@ footer{
       }
     }   
     .photo-conteiner {
-      margin: 0 20%;
+      padding: 0 20%;
     }
   }
 }
